k8s/infra/infra-vrs.yaml
# ==========================================
# 1. POSTGRESQL (VRS Security DB)
# ==========================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vrs-security-postgres
spec:
  selector:
    matchLabels:
      app: security-db
  template:
    metadata:
      labels:
        app: security-db
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: vrs-security-postgres
spec:
  selector:
    app: security-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

---
# ==========================================
# 2. REDIS (VRS Security Cache)
# ==========================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vrs-security-redis
spec:
  selector:
    matchLabels:
      app: security-redis
  template:
    metadata:
      labels:
        app: security-redis
    spec:
      containers:
        - name: redis
          image: redis:alpine
          command: ["redis-server", "--requirepass", "admin"]
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: vrs-security-redis
spec:
  selector:
    app: security-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379

---
# ==========================================
# 3. POSTGRESQL (VRS Vehicle DB)
# ==========================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vrs-vehicle-postgres
spec:
  selector:
    matchLabels:
      app: vehicle-db
  template:
    metadata:
      labels:
        app: vehicle-db
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: vrs-vehicle-postgres
spec:
  selector:
    app: vehicle-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

---
# ==========================================
# 4. MONGODB
# ==========================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vrs-mongodb
spec:
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: vrs-rental-mongo
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017

---
# ==========================================
# 5. RABBITMQ
# ==========================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vrs-rabbitmq
spec:
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management-alpine
          ports:
            - containerPort: 5672
            - containerPort: 15672
---
apiVersion: v1
kind: Service
metadata:
  name: vrs-rabbitmq
spec:
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: management
      protocol: TCP
      port: 15672
      targetPort: 15672

---
# ==========================================
# 5. S3 (VRS S3)
# ==========================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vrs-s3
spec:
  selector:
    matchLabels:
      app: vrs-s3
  template:
    metadata:
      labels:
        app: vrs-s3
    spec:
      containers:
        - name: localstack
          image: localstack/localstack
          ports:
            - containerPort: 4566
          volumeMounts:
            - name: docker-sock
              mountPath: /var/run/docker.sock
            - name: init-scripts
              mountPath: /etc/localstack/init/ready.d
      volumes:
        - name: docker-sock
          hostPath:
            path: /var/run/docker.sock
        - name: init-scripts
          configMap:
            name: localstack-init-script
            defaultMode: 0755
---
apiVersion: v1
kind: Service
metadata:
  name: vrs-localstack-service
spec:
  selector:
    app: vrs-s3
  ports:
    - protocol: TCP
      port: 4566
      targetPort: 4566
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vrs-s3-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  rules:
    - host: s3.vrs.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vrs-localstack-service
                port:
                  number: 4566
